--- a/HermesReply_Fase5_DB+ML_FlaviaePedro.ipynb
+++ b/HermesReply_Fase5_DB+ML_FlaviaePedro.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNpClBoobB6M3wTNDXExMFj",
+      "authorship_tag": "ABX9TyPT/6A4UF+iIglB05m84X5I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3053,6 +3053,249 @@
             "src  -> ['train_ml.py']\n",
             "imgs -> ['er_diagram.png', 'confusion_matrix_from_script.png', 'serie_sensor_1.png', 'leituras_por_tipo.png', 'confusion_matrix.png']\n",
             "data -> ['units.csv', 'sensor_types.csv', 'assets.csv', 'sites.csv', 'sensors.csv', 'thresholds.csv', 'readings.csv']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "PROJECT = \"/content/hermes-reply-fase5\"\n",
+        "GIT_DIR  = \"/content/hermes-reply-fase5-git\"\n",
+        "\n",
+        "print(\"== LOCAL (Colab) ==\")\n",
+        "!ls -la \"$PROJECT\"\n",
+        "print(\"\\nArquivos (até 2 níveis):\")\n",
+        "!find \"$PROJECT\" -maxdepth 2 -type f -printf \"LOCAL: %p\\n\" | sort\n",
+        "\n",
+        "print(\"\\n== CLONE (GIT_DIR) ==\")\n",
+        "!ls -la \"$GIT_DIR\"\n",
+        "print(\"\\nGit status:\")\n",
+        "!git -C \"$GIT_DIR\" status\n",
+        "print(\"\\nRemotes:\")\n",
+        "!git -C \"$GIT_DIR\" remote -v\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-rbITFTPyQiL",
+        "outputId": "c96279e2-9d03-4cfb-9328-1c665e3edb2f"
+      },
+      "execution_count": 130,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "== LOCAL (Colab) ==\n",
+            "total 1380\n",
+            "drwxr-xr-x 8 root root    4096 Sep  1 18:02 .\n",
+            "drwxr-xr-x 1 root root    4096 Sep  1 19:33 ..\n",
+            "drwxr-xr-x 2 root root    4096 Sep  1 16:20 data\n",
+            "drwxr-xr-x 2 root root    4096 Sep  1 16:16 ddl\n",
+            "-rw-r--r-- 1 root root      55 Sep  1 18:02 .gitignore\n",
+            "drwxr-xr-x 2 root root    4096 Sep  1 18:00 images\n",
+            "drwxr-xr-x 2 root root    4096 Sep  1 16:10 notebooks\n",
+            "-rw-r--r-- 1 root root    1436 Sep  1 18:02 README.md\n",
+            "drwxr-xr-x 2 root root    4096 Sep  1 18:00 reports\n",
+            "-rw-r--r-- 1 root root 1368064 Sep  1 18:02 sensors.db\n",
+            "drwxr-xr-x 2 root root    4096 Sep  1 17:52 src\n",
+            "\n",
+            "Arquivos (até 2 níveis):\n",
+            "LOCAL: /content/hermes-reply-fase5/data/assets.csv\n",
+            "LOCAL: /content/hermes-reply-fase5/data/readings.csv\n",
+            "LOCAL: /content/hermes-reply-fase5/data/sensors.csv\n",
+            "LOCAL: /content/hermes-reply-fase5/data/sensor_types.csv\n",
+            "LOCAL: /content/hermes-reply-fase5/data/sites.csv\n",
+            "LOCAL: /content/hermes-reply-fase5/data/thresholds.csv\n",
+            "LOCAL: /content/hermes-reply-fase5/data/units.csv\n",
+            "LOCAL: /content/hermes-reply-fase5/ddl/schema.sql\n",
+            "LOCAL: /content/hermes-reply-fase5/.gitignore\n",
+            "LOCAL: /content/hermes-reply-fase5/images/confusion_matrix_from_script.png\n",
+            "LOCAL: /content/hermes-reply-fase5/images/confusion_matrix.png\n",
+            "LOCAL: /content/hermes-reply-fase5/images/er_diagram.png\n",
+            "LOCAL: /content/hermes-reply-fase5/images/leituras_por_tipo.png\n",
+            "LOCAL: /content/hermes-reply-fase5/images/serie_sensor_1.png\n",
+            "LOCAL: /content/hermes-reply-fase5/README.md\n",
+            "LOCAL: /content/hermes-reply-fase5/reports/train_log.txt\n",
+            "LOCAL: /content/hermes-reply-fase5/sensors.db\n",
+            "LOCAL: /content/hermes-reply-fase5/src/train_ml.py\n",
+            "\n",
+            "== CLONE (GIT_DIR) ==\n",
+            "total 160\n",
+            "drwxr-xr-x 7 root root   4096 Sep  1 19:33 .\n",
+            "drwxr-xr-x 1 root root   4096 Sep  1 19:33 ..\n",
+            "drwxr-xr-x 2 root root   4096 Sep  1 19:33 data\n",
+            "drwxr-xr-x 2 root root   4096 Sep  1 19:33 ddl\n",
+            "drwxr-xr-x 8 root root   4096 Sep  1 19:33 .git\n",
+            "-rw-r--r-- 1 root root     44 Sep  1 19:33 .gitignore\n",
+            "-rw-r--r-- 1 root root 122016 Sep  1 19:33 HermesReply_Fase5_DB+ML_FlaviaePedro.ipynb\n",
+            "drwxr-xr-x 2 root root   4096 Sep  1 19:33 images\n",
+            "-rw-r--r-- 1 root root   5757 Sep  1 19:33 README.md\n",
+            "drwxr-xr-x 2 root root   4096 Sep  1 19:33 src\n",
+            "\n",
+            "Git status:\n",
+            "On branch main\n",
+            "Your branch is up to date with 'origin/main'.\n",
+            "\n",
+            "Changes to be committed:\n",
+            "  (use \"git restore --staged <file>...\" to unstage)\n",
+            "\t\u001b[32mnew file:   data/assets.csv\u001b[m\n",
+            "\t\u001b[32mnew file:   data/readings.csv\u001b[m\n",
+            "\t\u001b[32mnew file:   data/sensor_types.csv\u001b[m\n",
+            "\t\u001b[32mnew file:   data/sensors.csv\u001b[m\n",
+            "\t\u001b[32mnew file:   data/sites.csv\u001b[m\n",
+            "\t\u001b[32mnew file:   data/thresholds.csv\u001b[m\n",
+            "\t\u001b[32mnew file:   data/units.csv\u001b[m\n",
+            "\t\u001b[32mnew file:   ddl/schema.sql\u001b[m\n",
+            "\t\u001b[32mnew file:   images/confusion_matrix.png\u001b[m\n",
+            "\t\u001b[32mnew file:   images/confusion_matrix_from_script.png\u001b[m\n",
+            "\t\u001b[32mnew file:   images/er_diagram.png\u001b[m\n",
+            "\t\u001b[32mnew file:   images/leituras_por_tipo.png\u001b[m\n",
+            "\t\u001b[32mnew file:   images/serie_sensor_1.png\u001b[m\n",
+            "\t\u001b[32mnew file:   src/train_ml.py\u001b[m\n",
+            "\n",
+            "\n",
+            "Remotes:\n",
+            "origin\tgit@github.com:flahbocchino/hermes-reply-fase5.git (fetch)\n",
+            "origin\tgit@github.com:flahbocchino/hermes-reply-fase5.git (push)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "PROJECT = \"/content/hermes-reply-fase5\"\n",
+        "GIT_DIR  = \"/content/hermes-reply-fase5-git\"\n",
+        "\n",
+        "# copia TUDO do projeto para o clone (ddl/, src/, images/, data/...), exceto o que não deve ir\n",
+        "!rsync -av --delete \\\n",
+        "  --exclude 'sensors.db' \\\n",
+        "  --exclude '__pycache__/' \\\n",
+        "  --exclude '.ipynb_checkpoints/' \\\n",
+        "  \"$PROJECT/ \" \"$GIT_DIR/\"\n",
+        "\n",
+        "# commit + push\n",
+        "!git -C \"$GIT_DIR\" add -A\n",
+        "!git -C \"$GIT_DIR\" commit -m \"Sync ddl/src/images/data a partir do Colab\" || echo \"Nada para commitar\"\n",
+        "!git -C \"$GIT_DIR\" push origin main\n",
+        "\n",
+        "print(\"\\nConteúdo enviado (listas rápidas):\")\n",
+        "!find \"$GIT_DIR/ddl\" -maxdepth 1 -type f -printf \"ddl: %f\\n\" 2>/dev/null || true\n",
+        "!find \"$GIT_DIR/src\" -maxdepth 1 -type f -printf \"src: %f\\n\" 2>/dev/null || true\n",
+        "!find \"$GIT_DIR/images\" -maxdepth 1 -type f -printf \"img: %f\\n\" 2>/dev/null || true\n",
+        "!find \"$GIT_DIR/data\" -maxdepth 1 -type f -printf \"data: %f\\n\" 2>/dev/null || true\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JjyZiKWmyUPU",
+        "outputId": "be712c32-f18e-4eab-a706-2c2f89b2c333"
+      },
+      "execution_count": 131,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "sending incremental file list\n",
+            "rsync: [sender] link_stat \"/content/hermes-reply-fase5/ \" failed: No such file or directory (2)\n",
+            "\n",
+            "sent 19 bytes  received 12 bytes  62.00 bytes/sec\n",
+            "total size is 0  speedup is 0.00\n",
+            "rsync error: some files/attrs were not transferred (see previous errors) (code 23) at main.c(1338) [sender=3.2.7]\n",
+            "Author identity unknown\n",
+            "\n",
+            "*** Please tell me who you are.\n",
+            "\n",
+            "Run\n",
+            "\n",
+            "  git config --global user.email \"you@example.com\"\n",
+            "  git config --global user.name \"Your Name\"\n",
+            "\n",
+            "to set your account's default identity.\n",
+            "Omit --global to set the identity only in this repository.\n",
+            "\n",
+            "fatal: unable to auto-detect email address (got 'root@d3be4d20d959.(none)')\n",
+            "Nada para commitar\n",
+            "To github.com:flahbocchino/hermes-reply-fase5.git\n",
+            " \u001b[31m! [rejected]       \u001b[m main -> main (fetch first)\n",
+            "\u001b[31merror: failed to push some refs to 'github.com:flahbocchino/hermes-reply-fase5.git'\n",
+            "\u001b[m\u001b[33mhint: Updates were rejected because the remote contains work that you do\u001b[m\n",
+            "\u001b[33mhint: not have locally. This is usually caused by another repository pushing\u001b[m\n",
+            "\u001b[33mhint: to the same ref. You may want to first integrate the remote changes\u001b[m\n",
+            "\u001b[33mhint: (e.g., 'git pull ...') before pushing again.\u001b[m\n",
+            "\u001b[33mhint: See the 'Note about fast-forwards' in 'git push --help' for details.\u001b[m\n",
+            "\n",
+            "Conteúdo enviado (listas rápidas):\n",
+            "ddl: schema.sql\n",
+            "src: train_ml.py\n",
+            "img: er_diagram.png\n",
+            "img: confusion_matrix_from_script.png\n",
+            "img: serie_sensor_1.png\n",
+            "img: leituras_por_tipo.png\n",
+            "img: confusion_matrix.png\n",
+            "data: units.csv\n",
+            "data: sensor_types.csv\n",
+            "data: assets.csv\n",
+            "data: sites.csv\n",
+            "data: sensors.csv\n",
+            "data: thresholds.csv\n",
+            "data: readings.csv\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# === Config ===\n",
+        "REPO_DIR = \"/content/hermes-reply-fase5-repo\"  # pasta local do repo\n",
+        "\n",
+        "# 1) garantir dados de autor para o Git nesta sessão do Colab\n",
+        "!git -C {REPO_DIR} config user.name  \"flahbocchino\"\n",
+        "!git -C {REPO_DIR} config user.email \"flahbocchino@users.noreply.github.com\"\n",
+        "\n",
+        "# 2) garantir que estamos na branch main e sincronizados com o remoto\n",
+        "!git -C {REPO_DIR} fetch origin main\n",
+        "# se a branch não existir localmente, cria a partir do remoto\n",
+        "!git -C {REPO_DIR} checkout -B main origin/main\n",
+        "\n",
+        "# 3) trazer qualquer alteração que você fez pelo site do GitHub (rebase)\n",
+        "!git -C {REPO_DIR} pull --rebase origin main\n",
+        "\n",
+        "# 4) adicionar/commitar o que mudou no Colab (se não houver mudanças, o commit falha e está ok)\n",
+        "!git -C {REPO_DIR} add -A\n",
+        "!git -C {REPO_DIR} commit -m \"Sincroniza do Colab (ddl/src/images/notebooks)\" || echo \"Nada novo para commitar\"\n",
+        "\n",
+        "# 5) enviar para o GitHub\n",
+        "!git -C {REPO_DIR} push -u origin main\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gFubYZP6zJG3",
+        "outputId": "97b6f7d3-2a36-49ad-b80b-1938a26f81e6"
+      },
+      "execution_count": 132,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "fatal: not in a git directory\n",
+            "fatal: not in a git directory\n",
+            "fatal: not a git repository (or any of the parent directories): .git\n",
+            "fatal: not a git repository (or any of the parent directories): .git\n",
+            "fatal: not a git repository (or any of the parent directories): .git\n",
+            "fatal: not a git repository (or any of the parent directories): .git\n",
+            "fatal: not a git repository (or any of the parent directories): .git\n",
+            "Nada novo para commitar\n",
+            "fatal: not a git repository (or any of the parent directories): .git\n"
           ]
         }
       ]
