--- a/HermesReply_Fase5_DB+ML_FlaviaePedro.ipynb
+++ b/HermesReply_Fase5_DB+ML_FlaviaePedro.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPT/6A4UF+iIglB05m84X5I",
+      "authorship_tag": "ABX9TyPKD4F0a36bF6f6IWBrUFxb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3296,6 +3296,306 @@
             "fatal: not a git repository (or any of the parent directories): .git\n",
             "Nada novo para commitar\n",
             "fatal: not a git repository (or any of the parent directories): .git\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# caminhos\n",
+        "PROJECT = \"/content/hermes-reply-fase5\"       # onde estão ddl/, src/, images/, etc.\n",
+        "REPO_DIR = \"/content/hermes-reply-fase5-repo\" # cópia versionada\n",
+        "\n",
+        "REMOTE_SSH   = \"git@github.com:flahbocchino/hermes-reply-fase5.git\"\n",
+        "REMOTE_HTTPS = \"https://github.com/flahbocchino/hermes-reply-fase5.git\"\n",
+        "\n",
+        "# 1) Apaga eventual pasta antiga e clona de novo\n",
+        "import shutil, os, subprocess, sys\n",
+        "shutil.rmtree(REPO_DIR, ignore_errors=True)\n",
+        "\n",
+        "# Tenta clonar por SSH (se sua chave estiver ativa); se falhar, clona por HTTPS\n",
+        "ret = subprocess.call([\"git\", \"clone\", REMOTE_SSH, REPO_DIR])\n",
+        "if ret != 0:\n",
+        "    print(\"SSH falhou (provavelmente sem chave carregada). Clonando por HTTPS (somente leitura)…\")\n",
+        "    subprocess.check_call([\"git\", \"clone\", REMOTE_HTTPS, REPO_DIR])\n",
+        "\n",
+        "# 2) Sincroniza arquivos do projeto para o repo (sem o sensors.db)\n",
+        "!rsync -a --delete \\\n",
+        "    --exclude 'sensors.db' --exclude '__pycache__/' --exclude '.ipynb_checkpoints/' \\\n",
+        "    {PROJECT}/ {REPO_DIR}/\n",
+        "\n",
+        "# 3) Configura autor do commit nesta sessão\n",
+        "!git -C {REPO_DIR} config user.name  \"flahbocchino\"\n",
+        "!git -C {REPO_DIR} config user.email \"flahbocchino@users.noreply.github.com\"\n",
+        "\n",
+        "# 4) Adiciona, commita e tenta enviar\n",
+        "!git -C {REPO_DIR} add -A\n",
+        "!git -C {REPO_DIR} commit -m \"Sincroniza do Colab (ddl/src/images/notebooks)\" || echo \"Nada novo para commitar\"\n",
+        "\n",
+        "!git -C {REPO_DIR} push -u origin main\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "67mwlkWU0LcP",
+        "outputId": "176a81b6-080d-4ff8-a5a2-eb03a1dc51c7"
+      },
+      "execution_count": 133,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "fatal: not in a git directory\n",
+            "fatal: not in a git directory\n",
+            "fatal: not a git repository (or any of the parent directories): .git\n",
+            "fatal: not a git repository (or any of the parent directories): .git\n",
+            "Nada novo para commitar\n",
+            "fatal: not a git repository (or any of the parent directories): .git\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# TESTE SSH: confirma que a Deploy Key com write está ativa\n",
+        "!ssh -T git@github.com -o StrictHostKeyChecking=accept-new || true\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hm57ZyPk2Px8",
+        "outputId": "4660fd46-99f6-4862-90f3-3d862340fdaf"
+      },
+      "execution_count": 135,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hi flahbocchino/hermes-reply-fase5! You've successfully authenticated, but GitHub does not provide shell access.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os, subprocess\n",
+        "\n",
+        "BASE       = \"/content\"\n",
+        "PROJECT    = f\"{BASE}/hermes-reply-fase5\"\n",
+        "REPO_DIR   = f\"{BASE}/hermes-reply-fase5-repo\"\n",
+        "REMOTE_SSH = \"git@github.com:flahbocchino/hermes-reply-fase5.git\"\n",
+        "\n",
+        "def run(cmd, ok=(0,), capture=False):\n",
+        "    \"\"\"Executa comando e não explode: retorna rc (ou stdout se capture=True).\"\"\"\n",
+        "    r = subprocess.run(cmd, text=True, capture_output=capture)\n",
+        "    if capture:\n",
+        "        return r.stdout\n",
+        "    if r.returncode not in ok:\n",
+        "        out = (r.stdout or \"\") + (r.stderr or \"\")\n",
+        "        if out.strip():\n",
+        "            print(out.strip())\n",
+        "    return r.returncode\n",
+        "\n",
+        "# 0) Garantias básicas\n",
+        "assert os.path.isdir(PROJECT), f\"Pasta do projeto não encontrada: {PROJECT}\"\n",
+        "os.makedirs(REPO_DIR, exist_ok=True)\n",
+        "\n",
+        "# 1) Garante GIT inicializado\n",
+        "if run([\"git\",\"-C\",REPO_DIR,\"rev-parse\",\"--is-inside-work-tree\"]) != 0:\n",
+        "    run([\"git\",\"-C\",REPO_DIR,\"init\"])\n",
+        "    run([\"git\",\"-C\",REPO_DIR,\"config\",\"user.name\",\"flahbocchino\"])\n",
+        "    run([\"git\",\"-C\",REPO_DIR,\"config\",\"user.email\",\"flahbocchino@users.noreply.github.com\"])\n",
+        "\n",
+        "# 2) .gitignore simples\n",
+        "with open(os.path.join(REPO_DIR, \".gitignore\"), \"w\", encoding=\"utf-8\") as f:\n",
+        "    f.write(\"sensors.db\\n__pycache__/\\n.ipynb_checkpoints/\\n\")\n",
+        "\n",
+        "# 3) Sincroniza arquivos do projeto -> repo (sem sensors.db/caches)\n",
+        "run([\"rsync\",\"-a\",\"--delete\",\n",
+        "     \"--exclude\",\"sensors.db\",\n",
+        "     \"--exclude\",\"__pycache__/\",\n",
+        "     \"--exclude\",\".ipynb_checkpoints/\",\n",
+        "     f\"{PROJECT}/\", f\"{REPO_DIR}/\"])\n",
+        "\n",
+        "# 4) Remote: adiciona se não existir; senão ajusta URL\n",
+        "if run([\"git\",\"-C\",REPO_DIR,\"remote\",\"get-url\",\"origin\"]) != 0:\n",
+        "    run([\"git\",\"-C\",REPO_DIR,\"remote\",\"add\",\"origin\",REMOTE_SSH])\n",
+        "else:\n",
+        "    run([\"git\",\"-C\",REPO_DIR,\"remote\",\"set-url\",\"origin\",REMOTE_SSH])\n",
+        "\n",
+        "# 5) Garante branch main\n",
+        "run([\"git\",\"-C\",REPO_DIR,\"branch\",\"-M\",\"main\"])\n",
+        "\n",
+        "# 6) Commit se houver mudanças\n",
+        "status = subprocess.run([\"git\",\"-C\",REPO_DIR,\"status\",\"--porcelain\"], text=True, capture_output=True).stdout.strip()\n",
+        "if status:\n",
+        "    run([\"git\",\"-C\",REPO_DIR,\"add\",\"-A\"])\n",
+        "    run([\"git\",\"-C\",REPO_DIR,\"commit\",\"-m\",\"Sync do Colab (ddl/src/images/notebooks)\"])\n",
+        "else:\n",
+        "    print(\"Nada novo para commitar.\")\n",
+        "\n",
+        "# 7) Pull --rebase (ok mesmo se não houver mudanças) e push\n",
+        "run([\"git\",\"-C\",REPO_DIR,\"pull\",\"--rebase\",\"origin\",\"main\"], ok=(0,1))\n",
+        "run([\"git\",\"-C\",REPO_DIR,\"push\",\"-u\",\"origin\",\"main\"])\n",
+        "\n",
+        "print(\"\\n✅ Pronto! Confira no GitHub:\")\n",
+        "print(\"https://github.com/flahbocchino/hermes-reply-fase5\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E7VDpWje33iT",
+        "outputId": "a82e3485-48f1-4ff0-ec95-49d38cd5353b"
+      },
+      "execution_count": 137,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nada novo para commitar.\n",
+            "\n",
+            "✅ Pronto! Confira no GitHub:\n",
+            "https://github.com/flahbocchino/hermes-reply-fase5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Listar tudo que está no projeto\n",
+        "!ls -R /content/hermes-reply-fase5\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "l1khdRva5ll7",
+        "outputId": "9867412c-8597-47d7-ccd7-008ce0b51678"
+      },
+      "execution_count": 138,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/hermes-reply-fase5:\n",
+            "data  ddl  images  notebooks  README.md  reports  sensors.db  src\n",
+            "\n",
+            "/content/hermes-reply-fase5/data:\n",
+            "assets.csv    sensors.csv\tsites.csv\tunits.csv\n",
+            "readings.csv  sensor_types.csv\tthresholds.csv\n",
+            "\n",
+            "/content/hermes-reply-fase5/ddl:\n",
+            "schema.sql\n",
+            "\n",
+            "/content/hermes-reply-fase5/images:\n",
+            "confusion_matrix_from_script.png  er_diagram.png\t serie_sensor_1.png\n",
+            "confusion_matrix.png\t\t  leituras_por_tipo.png\n",
+            "\n",
+            "/content/hermes-reply-fase5/notebooks:\n",
+            "\n",
+            "/content/hermes-reply-fase5/reports:\n",
+            "train_log.txt\n",
+            "\n",
+            "/content/hermes-reply-fase5/src:\n",
+            "train_ml.py\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%cd /content\n",
+        "\n",
+        "# Sincroniza o projeto -> repositório local (sem subir o sensors.db)\n",
+        "!rsync -a --delete --exclude 'sensors.db' hermes-reply-fase5/ hermes-reply-fase5-repo/\n",
+        "\n",
+        "# Commit + pull --rebase + push\n",
+        "!git -C /content/hermes-reply-fase5-repo add -A\n",
+        "!git -C /content/hermes-reply-fase5-repo commit -m \"Publica ddl/src/images\"\n",
+        "!git -C /content/hermes-reply-fase5-repo pull --rebase origin main || true\n",
+        "!git -C /content/hermes-reply-fase5-repo push -u origin main\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5EUZUuwE50yD",
+        "outputId": "7a92d8d8-b61e-43b9-929e-5babedcbd412"
+      },
+      "execution_count": 139,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content\n",
+            "fatal: not a git repository (or any of the parent directories): .git\n",
+            "fatal: not a git repository (or any of the parent directories): .git\n",
+            "fatal: not a git repository (or any of the parent directories): .git\n",
+            "fatal: not a git repository (or any of the parent directories): .git\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# caminhos/remote\n",
+        "REPO_DIR = \"/content/hermes-reply-fase5-repo\"\n",
+        "REMOTE   = \"git@github.com:flahbocchino/hermes-reply-fase5.git\"  # via Deploy Key (SSH)\n",
+        "\n",
+        "import subprocess as sp\n",
+        "\n",
+        "def sh(cmd):\n",
+        "    return sp.run(cmd, text=True, capture_output=True)\n",
+        "\n",
+        "# adiciona origin se não existir; senão só atualiza a URL\n",
+        "r = sh([\"git\",\"-C\",REPO_DIR,\"remote\",\"add\",\"origin\",REMOTE])\n",
+        "if r.returncode != 0:\n",
+        "    sh([\"git\",\"-C\",REPO_DIR,\"remote\",\"set-url\",\"origin\",REMOTE])\n",
+        "\n",
+        "# confere\n",
+        "print(sh([\"git\",\"-C\",REPO_DIR,\"remote\",\"-v\"]).stdout)\n",
+        "\n",
+        "# puxa (se houver histórico) e faz push\n",
+        "sh([\"git\",\"-C\",REPO_DIR,\"pull\",\"--rebase\",\"origin\",\"main\"])\n",
+        "sh([\"git\",\"-C\",REPO_DIR,\"add\",\"-A\"])\n",
+        "sh([\"git\",\"-C\",REPO_DIR,\"commit\",\"-m\",\"Sync do Colab (ddl/src/imagens)\"])\n",
+        "print(sh([\"git\",\"-C\",REPO_DIR,\"push\",\"-u\",\"origin\",\"main\"]).stdout)\n",
+        "\n",
+        "print(\"\\n✅ Pronto! Confira: https://github.com/flahbocchino/hermes-reply-fase5\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "I8vb3S557fQB",
+        "outputId": "4b46a169-b1f0-4076-a0d2-8bea2bab42be"
+      },
+      "execution_count": 141,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "origin\tgit@github.com:flahbocchino/hermes-reply-fase5.git (fetch)\n",
+            "origin\tgit@github.com:flahbocchino/hermes-reply-fase5.git (push)\n",
+            "\n",
+            "\n",
+            "\n",
+            "✅ Pronto! Confira: https://github.com/flahbocchino/hermes-reply-fase5\n"
           ]
         }
       ]
